# product-search-bm25

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml
data/: product_catalog.json
src/: InvertedIndex.cpp  InvertedIndex.h  InvertedIndex.hpp  Product.cpp  Product.h  Product.hpp  ProductLengthTable.cpp  ProductLengthTable.h  ProductLengthTable.hpp  QueryProcessor.cpp  QueryProcessor.h  QueryProcessor.hpp  QueryResult.cpp  QueryResult.h  QueryResult.hpp  Scoring.h  Scoring.hpp  Tokenizer.cpp  Tokenizer.h  Tokenizer.hpp  main.cpp
